# shopnexus-recommender

./: README.md  docker-compose.yml  main.py  pyproject.toml
src/: app.py  config.py  embeddings.py  milvus.py  routes.py  service.py  utils.py
