[project]
name = "shopnexus-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "flagembedding>=1.3.5",
    "flask>=3.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "peft>=0.18.1",
    "pymilvus>=2.6.9",
    "pymilvus-model>=0.3.2",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
